--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,8 @@
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.2"
   },
   "homepage": "https://OlegTch.github.io/goit-react-hw-06-phonebook",
@@ -46,7 +49,6 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "prettier": "^2.5.1",
-    "redux-devtools-extension": "^2.13.9"
+    "prettier": "^2.5.1"
   }
 }
